fixed layout issue

--- a/utilities.css
+++ b/utilities.css
@@ -102,15 +102,13 @@
 }
 
 .collapsible-content p {
-  margin: 0.5rem 0;
-  margin-top: 5%;
+  margin-top: 1.1rem;
 }
 
 .collapsible-content ul {
   list-style-type: disc;
   padding-left: 1.5rem;
-  margin: 0.5rem 0;
-  margin-top: 8.9%;
+  margin-top: 1.8rem;
 }
 
 /* SEPARATOR */
